# Desafio-B2Blue

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  shell.nix
backend/: Dockerfile
backend/core/: settings.py  urls.py
backend/storage/: admin.py  models.py  pagination.py  serializers.py  tests.py  urls.py  validators.py  views.py
backend/storage/management/commands/: setup_initial_data.py
backend/storage/migrations/: 0001_initial.py  0002_alter_station_volume_percentage.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: HistoryTable.js  StationCard.js
frontend/src/services/: api.js
frontend/src/styles/: theme.js
