[tool.poetry]
name = "desafio-b2blue"
version = "0.1.0"
description = ""
authors = ["Luiz Alberto Portilho Braga <portilho.braga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
